# aviata_test_v2

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
airflow/: __init__.py  alembic.ini  app.py  celery_app.py  database.py  fsm.py  models.py  redis_client.py  repositories.py  serializers.py  utils.py
airflow/migartions/: env.py
airflow/migartions/versions/: 61970540eed7_init.py
config/: settings.py
postgres-data/: postmaster.pid
postgres-data/base/13757/: 1247  1249  1259  1259_fsm  16444  16447  16449  16450  16456  16457  16459  16461  16463  16464  16465  16471  16472  16474  16475  16476  16476_fsm  16476_vm  16480  16487  16488  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2620  2656  2657  2658  2659  2662  2663  (+17 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
postgres-data/pg_xact/: 0000
provider_a/: app.py  repository.py  serializers.py
provider_b/: app.py  repository.py  serializers.py
